syntax = "proto3";

import "common/ComponentRequest.proto";
import "freeCartoon/FreeForCartoonFlowResponse.proto";

option java_package = "cn.migu.selection.proto.freeforcartoonflowservice";
option java_outer_classname = "_FreeForCartoonFlowService";
option java_generic_services = true;

service FreeForCartoonFlowService {
	rpc getFreeCartoonFlowShowInfo (ComponentRequest) returns (FreeForCartoonFlowResponse);
}